--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -1,6 +1,8 @@
 difficulty,prompt,o1,o2,o3,o4
-N5,新しいくるまですね,あたらしい,あだらしい,あらたしい,あらだしい
+N5,**新しい**くるまですね,あたらしい,あだらしい,あらたしい,あらだしい
 N5,車,くるま,くろま,くるも,くまる
 N5,大きい,おおきい,おきい,おうきい,おきな
 N5,小さい,ちいさい,ちさい,ちいさな,ちいさ
+N5,あの　**ほてる**は　ゆうめいです,ホテル,ホラル,ホラハ,ホテハ
+N5,ここは　___　です。べんきょうできません。うるさい,くらい,さむい,あぶない
 
