--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -30,3 +30,8 @@ N5,いっしょに**北**へあるきましょう。,きた,みなみ,にし,ひ
 N5,あなたはその**国**をしっていますか。,くに,うに,くち,かに
 N5,きょうはおとうさんとスーパーへ**行**きました。,いきました,ききました,かきました,なきました
 N5,あの**高**いテレビをかいましょう。,たかい,やすい,こうい,ひくい
+N5,あついから**水**をのみました。,みず,すい,おちゃ,みす
+N5,**おかあさん**はおひるごはんをつくっています。,お母さん,お日さん,お目さん,お田さん
+N5,**がっこう**でにほんごのべんきょうをする。,学校,学交,字校,字交
+N5,このアイスを**たべて**ください。,食べて,金べて,首べて,春べて
+N5,あにがテレビを**みて**わらっています。,見て,男て,長て,目て
