--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -4,7 +4,7 @@ N5,車,くるま,くろま,くるも,くまる
 N5,大きい,おおきい,おきい,おうきい,おきな
 N5,小さい,ちいさい,ちさい,ちいさな,ちいさ
 N5,あの**ほてる**はゆうめいです,ホテル,ホラル,ホラハ,ホテハ
-N5,ここは___です。べんきょうできません。うるさい,くらい,さむい,あぶない
+N5,ここは___です。べんきょうできません。,うるさい,くらい,さむい,あぶない
 N5,きのうは**雨**がふっていました。,あめ,かぜ,はれ,ゆき
 N5,みんなでがっこうから**出**ましょう。,でましょう,てましょう,しましょう,みましょう
 N5,にほんの**七月**はあついです。,しちがつ,しちげつ,ななげつ,しちつき
