--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -35,3 +35,10 @@ N5,**おかあさん**はおひるごはんをつくっています。,お母さ
 N5,**がっこう**でにほんごのべんきょうをする。,学校,学交,字校,字交
 N5,このアイスを**たべて**ください。,食べて,金べて,首べて,春べて
 N5,あにがテレビを**みて**わらっています。,見て,男て,長て,目て
+N5,きょうはあさしんぶんを**よみました**。,読みました,話みました,語みました,訓みました
+N5,かぜをひいたから___がでる。,はなみず,インフルエンザ,ティッシュ,ペン
+N5,ぼくはおかねがほしいから___をしている。,アルバイト,カラオケ,ドライブ,デート
+N5,___がワンワンとにわでほえています。,いぬ,ねこ,さかな,むし
+N5,きたないようふくをおとうさんと___。,あらう,でる,すわる,あるく
+N5,おふろでシャワーを___。,あびる,はしる,きく,よむ
+N5,わたしの30さいのたんじょうびはさらいねんです。,わたしの30さいのたんじょうびはにねんごです。,わたしの30さいのたんじょうびはいちねんごです。,わたしの30さいのたんじょうびはさんねんごです。,わたしの30さいのたんじょうびはいちねんまえです。
