--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -44,3 +44,11 @@ N5,おふろでシャワーを___。,あびる,はしる,きく,よむ
 N5,わたしの30さいのたんじょうびはさらいねんです。,わたしの30さいのたんじょうびはにねんごです。,わたしの30さいのたんじょうびはいちねんごです。,わたしの30さいのたんじょうびはさんねんごです。,わたしの30さいのたんじょうびはいちねんまえです。
 N5,きのうおにいさんとデパートにいきました。,きのうあにとデパートにいきました。,きのうあねとデパートにいきました。,きのうおとうととデパートにいきました。,きのういもうととデパートにいきました。
 N5,いもうとは学校___いますよ。,に,へ,を,が
+N5,A:「おたんじょうびおめでとう！」 B:「ありがとう。___うれしいです。」,とても,たまに,よく,あまり
+N5,生徒:「試験はいつですか。」 先生:「明日___。」,あります,きます,います,もちます
+N5,さかな___にくを食べたいです。,も,が,か,を
+N5,（レストランで） 店員:「コーヒーです。お砂糖はいりますか。」 お客さん:「___。」 店員:「わかりました。」,はい、お願いします,いいえ、飲みます,いいえ、お願いです,はい、飲みません
+N5,A:「生徒は___教室にいますか。」 B:「ええ、全員います。」,もう,あとで,まえに,なにか
+N5,ぼくは電車___学校へ行きます。,で,に,が,を
+N5,このカバンはお母さんから___。,もらいました,かしました,うりました,あげました
+N5,田中:「はい、田中です。」 山本:「あ、山本です。___。」 田中:「ええ、少しお待ちください。」,小池さんはいますか,小池さんを話します,小池さんをください,小池さんがいいですか
