--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -52,3 +52,8 @@ N5,A:「生徒は___教室にいますか。」 B:「ええ、全員います。
 N5,ぼくは電車___学校へ行きます。,で,に,が,を
 N5,このカバンはお母さんから___。,もらいました,かしました,うりました,あげました
 N5,田中:「はい、田中です。」 山本:「あ、山本です。___。」 田中:「ええ、少しお待ちください。」,小池さんはいますか,小池さんを話します,小池さんをください,小池さんがいいですか
+N5,明日午前10時___来てください。,に,ぐらい,で,まで
+N5,昨日スーパーでりんご___みかんなどを買いました。,や,も,へ,は
+N5,（レストラン） 店員:「決まりましたか？」 客:「はい、___。」 店員:「わかりました。」,ビールをください,ビールをありますか,ビールを食べます,ビールを飲みますか
+N5,A:「明日あなたはどこかへ行きますか。」 B:「___。」 A:「いいですね！」,川へ行きます,川でおよぎません,川がすきです,川は行きません
+N5,クラスメイト___もんだいをかんがえる。,と,を,へ,に
