--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -57,3 +57,8 @@ N5,昨日スーパーでりんご___みかんなどを買いました。,や,も
 N5,（レストラン） 店員:「決まりましたか？」 客:「はい、___。」 店員:「わかりました。」,ビールをください,ビールをありますか,ビールを食べます,ビールを飲みますか
 N5,A:「明日あなたはどこかへ行きますか。」 B:「___。」 A:「いいですね！」,川へ行きます,川でおよぎません,川がすきです,川は行きません
 N5,クラスメイト___もんだいをかんがえる。,と,を,へ,に
+N5,店員:「何を探していますか。」 お客さん:「___。」 店員:「はい、ありますよ。」,くつはありますか,くつをさがします,くつはいいですね,くつはございません
+N5,A:「今日は夜も仕事ですか。」 B:「ええ、夜の8時___仕事です。」,まで,ので,もう,まだ
+N5,A:「さようなら。」 B:「さようなら。また___。」,明日,昨日,今朝,今日
+N5,お母さんがやさしいことば___くれた。,を,へ,に,が
+N5,ここのちかくには**何**がありますか。,なに,どこ,どれ,だれ
