--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -77,3 +77,9 @@ N5,ことしは2050ねんだ。___は2051ねんだ。,らいねん,きょねん,
 N5,おねえさんはまいにちこうえんではしります。,おねえさんはいつもこうえんではしります。,おねえさんはすこしこうえんではしります。,おねえさんはときどきこうえんではしります。,おねえさんはたまにこうえんではしります。
 N5,お母さん:「何時のバスに乗りますか。」 お父さん:「___。」,十時のバスに乗ります,十時もバスになります,十時にバスにとまります,バスを十時です
 N5,A:「そのイスは何円でしたか？」 B:「二万円___でした。」,くらい,すぎる,あと,まえ
+N5,日本人1:「わたしは日本人です。」 日本人2:「わたし___日本人です。」,も,へ,に,を
+N5,A:「学校へは___行きますか。」 B:「電車で行きます。」,どう,いつ,なに,どこ
+N5,A:「あなたは___パーティーへ行きましたか。」 B:「昨日行きました。」,いつ,どこ,だれ,なに
+N5,これはだれのぼうしです___？,か,ね,わ,よ
+N5,（学校） 先生:「この問題、わかりますか？」 生徒:「いいえ、___。」 先生:「じゃあ、今から教えましょう。」,わかりません,わかるます,わかっています,わかるつもりです
+N5,先生:「宿題はもう終わりましたか。」 生徒:「___。」 先生:「はやいですね！」,はい、おわりました,いいえ、おわります,いいえ、おわりません,はい、おわりません
