--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -83,3 +83,9 @@ N5,A:「あなたは___パーティーへ行きましたか。」 B:「昨日行
 N5,これはだれのぼうしです___？,か,ね,わ,よ
 N5,（学校） 先生:「この問題、わかりますか？」 生徒:「いいえ、___。」 先生:「じゃあ、今から教えましょう。」,わかりません,わかるます,わかっています,わかるつもりです
 N5,先生:「宿題はもう終わりましたか。」 生徒:「___。」 先生:「はやいですね！」,はい、おわりました,いいえ、おわります,いいえ、おわりません,はい、おわりません
+N4,いしゃ：「**口**をおおきくあけてください。」,くち,のど,みみ,はな
+N4,そのレストランは**安い**のに、とてもおいしいです。,やすい,たかい,かるい,せまい
+N4,わたしはめが**悪い**ので、めがねをかけています。,わるい,くらい,ちいさい,いい
+N4,あなたのそのいけんには**反対**です。,はんたい,はんづい,はんつい,はんだい
+N4,わたしの**姉**は、わたしよりあしがはやいです。,あね,あに,いもうと,おとうと
+N4,この**仕事**はたのしいですが、とてもたいへんです。,しごと,しぐさ,こごと,おこと
