--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -83,6 +83,22 @@ N5,A:「あなたは___パーティーへ行きましたか。」 B:「昨日行
 N5,これはだれのぼうしです___？,か,ね,わ,よ
 N5,（学校） 先生:「この問題、わかりますか？」 生徒:「いいえ、___。」 先生:「じゃあ、今から教えましょう。」,わかりません,わかるます,わかっています,わかるつもりです
 N5,先生:「宿題はもう終わりましたか。」 生徒:「___。」 先生:「はやいですね！」,はい、おわりました,いいえ、おわります,いいえ、おわりません,はい、おわりません
+N5,でんしゃの**駅**はどこですか。,えき,みせ,まち,いえ
+N5,このみちは**右**へまがってください。,みぎ,ひだり,うえ,した
+N5,わたしはにほんごを**少し**はなせます。,すこし,たくさん,ぜんぶ,いちど
+N5,このペンは___ですか。,あなたの,あなたに,あなたを,あなたへ
+N5,まどを___ください。あついです。,あけて,しめて,みせて,けして
+N5,A:「きのうなにをしましたか。」 B:「ほんを___。」,よみました,のみました,はしりました,つくりました
+N5,スーパーでたまごをふたつ___。,かいました,かいます,かう,かって
+N5,このへやはとても___です。そうじしましょう。,きたない,しずか,あかるい,きれい
+N5,わたしのしゅみはしゃしんを___ことです。,とる,うる,あそぶ,たべる
+N5,でんきがついています。けさないで___。,ください,いました,あります,なります
+N5,日ようびはどこへも___。,いきません,いきます,いきました,いく
+N5,このかんじは**木**です。,き,ほん,みず,やま
+N5,おとうとはサッカーが___です。,すき,じょうず,げんき,しずか
+N5,A:「いまなんじですか。」 B:「___です。」,くじはん,きょう,まいにち,にほん
+N5,きょうはあめですからかさを___ください。,もって,たべて,あらって,みて
+N5,このりょうりはからい___おいしいです。,でも,から,ので,まで
 N4,いしゃ：「**口**をおおきくあけてください。」,くち,のど,みみ,はな
 N4,そのレストランは**安い**のに、とてもおいしいです。,やすい,たかい,かるい,せまい
 N4,わたしはめが**悪い**ので、めがねをかけています。,わるい,くらい,ちいさい,いい
