--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -115,6 +115,19 @@ N5,**ごぜん**6時に家を出ました。,午前,牛前,半前,五前
 N5,もっと**おおきい**テーブルを買いたいです。,大きい,小きい,丈きい,太きい
 N5,**にほんご**でどう言いますか。,日本語,日本梧,日本読,日本後
 N5,**おとこ**の子が七人います。,男,女,母,父
+N5,だれかあしたの天気を**しって**いますか。,知って,矢って,失って,兵って
+N5,がくせいはぜんぶで**にひゃくにん**です。,二百人,二千人,二万人,二十人
+N5,**ことし**のなつやすみはどのぐらいありますか。,今年,毎年,今日,今月
+N5,どれがいちばん**おおきい**ですか。,大きい,人きい,犬きい,天きい
+N5,**ひるやすみ**にコンビニにおべんとうを買いに行きます。,昼休み,尽休み,尻休み,局休み
+N5,たまに**くに**の父と母に電話をします。,国,固,周,園
+N5,冬は**がいこく**にりょこうに行きたいです。,外国,打国,対国,海国
+N5,れいぞうこの**なか**においしいケーキがありますよ。,中,早,牛,串
+N5,あぶないですから、**はしらないで**ください。,走らないで,足らないで,足らないで,定らないで
+N5,昼間はあつかったけど、**ゆうがた**になってすずしくなりました。,夕がた,名がた,多がた,月がた
+N5,本を3さつ**かいました**。,買いました,買いました,胃いました,冒いました
+N5,あっ！西の**そら**を見てください。,空,穴,室,突
+N5,あのしんごうを**ひだり**にまがってください。,左,石,古,右
 N4,いしゃ：「**口**をおおきくあけてください。」,くち,のど,みみ,はな
 N4,そのレストランは**安い**のに、とてもおいしいです。,やすい,たかい,かるい,せまい
 N4,わたしはめが**悪い**ので、めがねをかけています。,わるい,くらい,ちいさい,いい
