--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -182,6 +182,13 @@ N4,その仕事、私___させてください。,に,を,で,が
 N4,先生はおもしろいことを言ってよくみんなを___。,わらわせる,わらいたい,わらわれる,わらえる
 N4,きのうはゴルフのとちゅうで雨に___たいへんだった。,ふられて,ふって,ふられて,ふらせて
 N4,お父さんはむすこに英語を勉強___。,させた,した,された,なさった
+N4,私は、大学で新しい技術を研究しています。私の研究室では、ロボットを動かす方法を調べています。私の姉も同じ大学で、姉は薬の研究をしています。研究は簡単ではありませんが、新しいことを見つけると、とても嬉しいです。私は大学で何をしていますか。,ロボットの研究をしていて、それは簡単ではない。,薬の研究をしていて、それは簡単だ。,薬の研究をしていて、それは簡単ではない。,ロボットの研究をしているが新しいことは何も見つけていない。
+N4,小林さんは、デパートの駐車場で働いています。運転手に駐車のルールを説明したり、駐車場の中をチェックしたりします。それから、変な車や人がいないか確認したり、お金を払う場所の機械が動くかどうか確認したりします。小林さんの仕事ではないものはどれですか。,駐車場の料金を決めます。,機械が動くかどうかを確認します。,変な車がいないかをチェックします。,駐車場のルールを説明します。
+N4,子ども：「おなかがすいたよ〜。ご飯を食べたい。」 お父さん：「これから料理を___ところだよ。少し待ってね。」,する,した,していた,している
+N4,お父さんやお母さんが作るラーメンとかカレー___を作ってみたいです。,とか,しか,も,ので
+N4,男の人：「そこの女の子、ぼくを___がらないで！ぼくはいい人だよ。」,こわ,こわくて,こわい,こわく
+N4,先生：「あなたの日本語は、とても上手ですね。」 生徒：「ありがとうございます。___です。」,がんばってよかった,がんばってください,がんばります,がんばった
+N4,昨日、デパートで青い化粧品を買いました。レジの人が「最近、変わっている色の化粧品を買う人が増えていますよ。」と教えてくれました。私は人気があるからではなく、自分に合うと思って買いましたが、レジの人が言ったことを面白いと思いました。「私」はどうして青い化粧品を買いましたか。,自分に合うと思ったから,人気があると聞いたから,レジの人におすすめされたから,面白いと思ったから
 N4,山本さんはちこくをしないと言った___、またちこくをした。,のに,から,ので,て
 N4,きのうは学校を休みました。じしんで電車が止まった___です。,から,ので,のに,し
 N4,電車のじこがあった___、じゅぎょうにおくれた。,ので,で,のに,て
