--- a/tools/samples/language/japanese.csv
+++ b/tools/samples/language/japanese.csv
@@ -182,6 +182,36 @@ N3,今日は雨がふるから洗濯物を**ほさない**ほうがいい。,干
 N3,強風で木がもう少しで**たおれる**ところだった。,倒れる,至れる,例れる,到れる
 N3,きらいなものは**むり**に食べることはない。,無理,無里,無埋,無狸
 N3,会議は来月の**じょうじゅん**に行われることになっている。,上旬,上脅,上句,上向
+N3,苦しいことから**にげるな**と言われた。,逃げるな,挑げるな,脱げるな,光げるな
+N3,今朝、電車で足を**ふまれた**。,踏まれた,路まれた,踊まれた,躍まれた
+N3,高校を卒業したら、**しゅうしょく**するつもりです。,就職,習職,習織,就織
+N3,工場が機械化され、多くの従業員が**しつぎょう**した。,失業,疾業,室業,矢業
+N3,ここ数年、**ろうどうじかん**が短くなってきている。,労働時間,栄働時間,労動時間,栄動時間
+N3,今年の夏は昨年にくらべて**すずしい**。,涼しい,清しい,深しい,流しい
+N3,この意見に関して私は**さんせい**できません。,賛成,参政,参成,賛政
+N3,このカメラには**でんち**が2本必要です。,電池,雷池,電地,電也
+N3,このスープは**からすぎる**ばかりかまずい。,辛すぎる,熱すぎる,熱すぎる,甘すぎる
+N3,この計画にはまったく**ふあん**がない。,不安,不暗,不全,不案
+N3,このコーヒーは、アメリカにしては**こい**。,濃い,農い,厚い,強い
+N3,この作品について、**そっちょくな**意見をお願いします。,率直な,卒直な,素直な,実直な
+N3,この仕事は、年齢(ねんれい)・**せいべつ**に関係なくできる。,性別,姓別,生別,牲別
+N3,この**しせつ**は、ゆっくり休憩できるように作られた。,施設,私説,市設,志説
+N3,この商店街には60**けん**もの店があります。,軒,件,県,研
+N3,このテレビは東南アジアで**くみたてられて**いる。,組み立てられて,但み立てられて,粗み立てられて,祖み立てられて
+N3,この**にもつ**を航空便で送りたいんですが。,荷物,何持,荷持,苛物
+N3,このバッグは丈夫(じょうぶ)で、その上**かるい**。,軽い,動い,重い,軽い
+N3,これは欧州**むけ**の製品です。日本では使えません。,向け,而け,面け,同け
+N3,今晩**とまっても**いいでしょうか。,泊まっても,吐まっても,止まっても,拍まっても
+N3,最近の企業は**こくさいてきな**人を求(もと)めている。,国際的,国家的,国際均,国祭均
+N3,最近はマンションの**じゅよう**が減ってきた。,需要,充用,受用,重要
+N3,桜(さくら)の花、早く**さかない**かなあ。,咲かない,吹かない,知かない,若かない
+N3,時間があれば、ゆっくり**ふなたび**でもしてみたい。,船旅,船族,航旅,航族
+N3,事故(じこ)が原因で、今日の**つうきん**電車は満員だった。,通勤,痛勤,進難,通難
+N3,仕事の時間が短いわりには**きゅうりょう**がいい。,給料,究料,究科,給科
+N3,正直に話しますから**おこらないで**聞いてください。,怒らない,努らない,叫らない,起こらない
+N3,この子は失敗しても決して**なきません**。,泣きません,泪きません,涙きません,流きません
+N3,自分の言葉に**せきにん**を持つべきだ。,責任,横任,緒任,貴任
+N3,新聞で私の好きな**げいじゅつか**の記事を読んだ。,芸術家,云術家,芸術家,云術家
 N4,ビールは___ばおいしくありません。,つめたくなけれ,つめたなく,つめたくじゃない,つめたくなかった
 N4,さくらの花は春に___とさきません。,ならない,ならず,ならなけれ,ならなく
 N4,つぎのかどを右に___とデパートがあります。,まがる,まがって,まがった,まがろう
